2007-05-18  Michal Nazarewicz  <mina86/AT/mina86.com>

	* malloc.c: + checks number of arguments
	+ now ANSI C compatible

	* Makefile: + added -Wall switch to compile commands

	* getlyrics.pl: + added message when tool is about to download lytics

	* tuptime.c: + accepts -b and -u arguments for giving files location
	+ -p option removed
	+ now ANSI C compatible

2007-03-13  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mkpkg: + small fixes

	* quotes: + small clean up

2007-01-31  Michal Nazarewicz  <mina86/AT/mina86.com>

	* gz2bz: + interactive mode and more descriptive messages

2006-12-18  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes: + a few new quotes
	+ author lines reformatted (ie. [attrib.] at the end instead of
	"Attributed to" at the beginning)

	* installkernel: + better way of checking version number
	* installkernel.8: + note on need to modify
	include/linux/version.h removed

2006-11-27  Michal Nazarewicz  <mina86/AT/mina86.com>

	* inplace: New file

2006-10-06  Michal Nazarewicz  <mina86/AT/mina86.com>

	* tuptime.c: + %lf -> %f in printf

	* cutcom.c: + rebuild - states defined in constants not in code

	* tuptime.c: + conforming to C89 (I hope)
	* xgetclass.c: + conforming to C89 (I hope)

	* pingrange.pl: + more address range formats added
	+ can specify several ranges

	* mpd-show.c: + name->state was not changed after error
	+ DEFAULT_FORMAT altered

	* tv: + downloads programm for only one day instead of two

2006-10-02  Michal Nazarewicz  <mina86/AT/mina86.com>

	* gz2bz: + bug fixed when GZIP environment variable was set
	+ several tiny changes and fixes

2006-10-01  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mpd-show.c: + division by zero bug fixed

	* README: + tv added
	* tv: New file

2006-09-29  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile, README: + changelog.pl added
	* changelog.pl: New file

	* traf.sh: + parametrised
	+ display changed

	* mpd-show.c: + usage() fixed
	+ columns read COLUMNS env variable