@@ -1,6 +1,6 @@
 /*
  * Logs to syslog all messages logged to syslog :]
- * $Id: infinite-logger.c,v 1.3 2006/09/28 15:06:19 mina86 Exp $
+ * $Id: infinite-logger.c,v 1.4 2007/06/30 08:41:02 mina86 Exp $
  * Copyright (c) 2005 by Michal Nazareicz (mina86/AT/mina86.com)
  * Licensed under the Academic Free License version 2.1.
  */
@@ -26,16 +26,20 @@
 #include <syslog.h>
 
 int main(void) {
-	FILE *fp = fopen("/var/log/EVERYTHING", "r");
-	if (fp==NULL) {
+	char buffer[4096];
+	FILE *fp;
+
+	if (!(fp = fopen("/var/log/EVERYTHING", "r"))) {
 		fputs("Could not open /var/log/EVERYTHING", stderr);
 		return 1;
 	}
 	openlog("infinite-logger", 0, LOG_USER);
 
-	char buffer[4096];
-	for(;;) syslog(LOG_DEBUG, "%s", fgets(buffer, sizeof(buffer), fp));
+	while (fgets(buffer, sizeof buffer, fp)) {
+		syslog(LOG_DEBUG, "%s", buffer);
+	}
 
 	closelog();
 	fclose(fp);
+	return 0;
 }
